@@ -1,6 +1,9 @@
 DD MMM YYYY - 2.9.2 - To be released
 ------------------------------------
 
+ * {dis|en}able-handler-logging: Option to disable logging of
+   Apache handler in audit log when log level < 9.
+   [Issue #1070 - Marc Stern]
  * {dis|en}able-filename-logging: Option to disable logging of filename
    in audit log.
    [Issue #1065 - Marc Stern]
